# real2render2real

./: .gitignore  .gitmodules  README.md  asyncio_error.md  env_3dgs_to_mesh.sh  env_data_gen.sh  env_real_to_sim.sh  pyproject.toml  sugar_environment.yml
real2render2real/isaaclab_viser/: base.py  camera_manager.py
real2render2real/isaaclab_viser/configs/articulation_configs/: yam_cfg_diffIK.py  yumi_cfg_diffIK.py  yumi_cfg_from_urdf.py
real2render2real/isaaclab_viser/configs/scene_configs/: franka_base_cfg.py  franka_scene_cfg.py  yam_base_cfg.py  yam_scene_cfg.py  yumi_base_cfg.py  yumi_base_wrist_BRIO_cfg.py  yumi_scene_cfg.py  yumi_supp_base_cfg.py
real2render2real/isaaclab_viser/controllers/: diffusion_policy.py  jaxmp_diff_ik_controller.py  simeon_jaxmp_diff_ik_controller.py  verify_urdfs.py
real2render2real/isaaclab_viser/data/scripts/: trajectory_replay.py
real2render2real/isaaclab_viser/franka_simulators/: franka_coffee_maker.py
real2render2real/isaaclab_viser/yam_simulators/: yam_coffee_maker.py  yam_faucet.py
real2render2real/isaaclab_viser/yumi_simulators/: yumi_cardboard_lift.py  yumi_coffee_maker.py  yumi_drawer_open.py  yumi_faucet.py  yumi_led_light.py  yumi_tiger_pick_r2r2r.py
real2render2real/isaaclab_viser/yumi_simulators/old/: yumi_pick_tiger.py  yumi_push_stapler.py  (+5 more)
real2render2real/yam_simulators/: yam_coffee_maker.py
scripts/: converter.py  eval_sim.py  franka_convert_dpgs_data_fast.py  run.py  run_franka.py  run_yumi.py  test_urdf_offset.py  to_zarr_dataset.py  visualize_dataset_randomization.py  yumi_convert_dpgs_data_fast.py
